--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nodemonConfig": {
     "watch": [
       "server/"
-    ],    
+    ],
     "ignore": [
       "client/"
     ]
@@ -35,15 +35,17 @@
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
+    "knex": "^0.15.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "sqlite3": "^4.0.4",
     "superagent": "^3.8.3",
     "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0"    
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
