--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "survey",
+  "name": "cookbook",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -19,7 +19,8 @@
   "babel": {
     "presets": [
       "env",
-      "react"
+      "react",
+      "stage-0"
     ]
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^3.0.0",
     "dotenv": "^6.0.0",
