--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^3.0.0",
+    "css-loader": "^1.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
@@ -44,7 +45,9 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
     "sqlite3": "^4.0.4",
+    "style-loader": "^0.23.1",
     "superagent": "^3.8.3",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
